force-app/main/default/objects/MOA_Config__c/MOA_Config__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Configuration settings for Margin Opportunity Assessment scanner.</description>
    <label>MOA Config</label>
</CustomObject>