force-app/main/default/objects/MOA_Config__c/fields/Install_Date__c.field-meta.xml
<CustomField>
    <fullName>Install_Date__c</fullName>
    <description>Date MOA was installed in this org.</description>
    <label>Install Date</label>
    <type>Date</type>
</CustomField>