force-app/main/default/objects/MOA_Config__c/fields/Last_Scan_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Scan_Date__c</fullName>
    <description>Timestamp of the most recent scan execution.</description>
    <label>Last Scan Date</label>
    <type>DateTime</type>
</CustomField>