force-app/main/default/objects/MOA_Config__c/fields/Min_Cohort_Size__c.field-meta.xml
<CustomField>
    <fullName>Min_Cohort_Size__c</fullName>
    <defaultValue>5</defaultValue>
    <description>Minimum number of deals required to form a valid cohort.</description>
    <label>Min Cohort Size</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>