force-app/main/default/objects/MOA_Config__c/fields/Scan_Months__c.field-meta.xml
<CustomField>
    <fullName>Scan_Months__c</fullName>
    <defaultValue>24</defaultValue>
    <description>Number of months of deal history to scan.</description>
    <label>Scan Months</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>